<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_refresh"
        android:icon="@drawable/ic_refresh"
        android:title="@string/menu_refresh"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_home"
        android:title="@string/menu_home"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_email"
        android:title="@string/menu_email"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_toggle_lock"
        android:title="@string/menu_lock"
        android:checkable="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_open_browser"
        android:title="@string/menu_open_browser"
        app:showAsAction="never" />
</menu>
